--- a/01-practice/index.html
+++ b/01-practice/index.html
@@ -21,20 +21,25 @@
         <div class="inner">
             <section class="discussion">
                 <h2>DISCUSSION</h2>
-                <article class="first-class">
-                    <img src="./images/pic_discussion01.png" alt="">
-                    <p>公文式教育が提供する価値を、より高めていくための取り組みとは何か？</p>
-                    <a href=""># 入社10年目以上</a>
-                    <a href=""># リーダー</a>
-                    <a href=""># KUMONを知る</a>
-                </article>
-                <article>
-                    <img src="./images/pic_discussion02.png" alt="">
-                    <p>今後も提供し続けていくべき、公文式教育の普遍的価値とは何か？</p>
-                    <a href=""># 公文の理念</a>
-                    <a href=""># これからのKUMON</a>
-                    <a href=""># グローバル</a>
-                </article>
+
+                <div class="posts">
+                    <article class="first-class">
+                        <img src="./images/pic_discussion01.png" alt="">
+                        <p>公文式教育が提供する価値を、より高めていくための取り組みとは何か？</p>
+                        <a href=""># 入社10年目以上</a>
+                        <a href=""># リーダー</a>
+                        <a href=""># KUMONを知る</a>
+                    </article>
+
+                    <article>
+                        <img src="./images/pic_discussion02.png" alt="">
+                        <p>今後も提供し続けていくべき、公文式教育の普遍的価値とは何か？</p>
+                        <a href=""># 公文の理念</a>
+                        <a href=""># これからのKUMON</a>
+                        <a href=""># グローバル</a>
+                    </article>
+                </div>
+
             </section>
         </div>
     </main>
